<resources>
    <string name="app_name">TelegramTask</string>
    <string name="_812_subscribers">812 subscribers</string>
    <string name="links">Links</string>
    <string name="files">Files</string>
    <string name="media">Media</string>
    <string name="on">On</string>
    <string name="notifications">Notifications</string>
    <string name="invite_link">Invite Link</string>
    <string name="t_me_thechance101">t.me/theChance101</string>
    <string name="info">Info</string>
    <string name="the_chance">The chance</string>
    <string name="back_icon">Back Icon</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="qr_icon">QR code Icon</string>
</resources>