<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">

    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_height"
        android:background="@color/brand_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_icon"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:contentDescription="@string/back_icon"
        android:src="@drawable/baseline_arrow_back_24"
        android:translationZ="@dimen/margin_1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/menu_icon"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:contentDescription="@string/menu_icon"
        android:src="@drawable/baseline_more_vert_24"
        android:translationZ="@dimen/margin_1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_profile"
        android:layout_width="@dimen/profile_size"
        android:layout_height="@dimen/profile_size"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_22dp"
        android:scaleType="fitXY"
        android:src="@drawable/img_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_icon"
        app:shapeAppearance="@style/RoundedShapeAppearance" />


    <TextView
        android:id="@+id/tv_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_5dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/the_chance"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toTopOf="@+id/tv_subscribers"
        app:layout_constraintStart_toEndOf="@+id/img_profile"
        app:layout_constraintTop_toTopOf="@+id/img_profile" />

    <TextView
        android:id="@+id/tv_subscribers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.9"
        android:fontFamily="@font/roboto"
        android:text="@string/_812_subscribers"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintStart_toStartOf="@+id/tv_profile_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_name" />


    <TextView
        android:id="@+id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/info"
        android:textColor="@color/lactic"
        android:textSize="@dimen/text_size_15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background" />

    <TextView
        android:id="@+id/tv_channel_id"
        style="@style/black_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:text="@string/t_me_thechance101"
        app:layout_constraintStart_toStartOf="@+id/tv_info"
        app:layout_constraintTop_toBottomOf="@+id/tv_info" />


    <TextView
        android:id="@+id/tv_invite_link"
        style="@style/grey_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invite_link"
        app:layout_constraintStart_toStartOf="@+id/tv_channel_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_channel_id" />


    <ImageView
        android:id="@+id/icon_qrcode"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginEnd="@dimen/margin_22dp"
        android:contentDescription="@string/qr_icon"
        android:src="@drawable/baseline_qr_code_24"
        app:layout_constraintBottom_toBottomOf="@+id/tv_invite_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_channel_id" />

    <View
        android:id="@+id/divider_thin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_1dp"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_14dp"
        android:background="@color/divider_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_invite_link" />


    <TextView
        android:id="@+id/tv_notifications"
        style="@style/black_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_12dp"
        android:text="@string/notifications"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_thin" />


    <TextView
        android:id="@+id/tv_notification_status"
        style="@style/grey_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on"
        app:layout_constraintStart_toStartOf="@+id/tv_notifications"
        app:layout_constraintTop_toBottomOf="@+id/tv_notifications" />


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/btn_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_22dp"
        android:checked="true"
        android:theme="@style/Theme.MyTheme"
        app:layout_constraintBottom_toBottomOf="@+id/tv_notification_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_notifications" />


    <View
        android:id="@+id/view"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:background="@color/divider_color"
        app:layout_constraintBottom_toBottomOf="@+id/btn_switch"
        app:layout_constraintEnd_toStartOf="@+id/btn_switch"
        app:layout_constraintTop_toTopOf="@+id/btn_switch" />


    <View
        android:id="@+id/divider_thick"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_22dp"
        android:layout_marginTop="12dp"
        android:background="@color/divider_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_notification_status" />


    <TextView
        android:id="@+id/tv_media"
        style="@style/category_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12dp"
        android:text="@string/media"
        android:textColor="@color/lactic"
        app:layout_constraintEnd_toStartOf="@+id/tv_files"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_thick" />

    <TextView
        android:id="@+id/tv_files"
        style="@style/category_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/files"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/tv_media"
        app:layout_constraintEnd_toStartOf="@+id/tv_links"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_media"
        app:layout_constraintTop_toTopOf="@+id/tv_media" />

    <TextView
        android:id="@+id/tv_links"
        style="@style/category_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/links"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/tv_files"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_files"
        app:layout_constraintTop_toTopOf="@+id/tv_files" />


    <View
        android:id="@+id/selected_sign"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="@dimen/margin_5dp"
        android:background="@color/lactic"
        app:layout_constraintEnd_toEndOf="@+id/tv_media"
        app:layout_constraintStart_toStartOf="@+id/tv_media"
        app:layout_constraintTop_toBottomOf="@+id/tv_media" />


</androidx.constraintlayout.motion.widget.MotionLayout>